--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,7 +21,7 @@
 title: Challenger
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-Add original content, code, images, etc
+"Add original content, code, images, etc"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
